# ct-netdisk-download

./: .gitignore  README.md  pyproject.toml
src/ctfile_downloader/: api.py  aria2_rpc.py  downloader.py  main.py  parser.py
tests/: test_api.py  test_aria2_rpc.py  test_downloader.py  test_main.py  test_parser.py
